--- a/nacafe-lora/public/index.html
+++ b/nacafe-lora/public/index.html
@@ -6,7 +6,7 @@
 
     <script defer src="/bundle.js"></script>
 
-    <title>Webová aplikace</title>
+    <title>Café Lóra</title>
   </head>
   <body>
     <div id="app"></div>
